app/css/app.css
body {
    background-color: #eee;
    margin: 0;
    padding: 0;
    font-family: "Segoe UI", Ubuntu;
}

#top-bar {
    margin-left: 110px;
    height: 30px;
    padding: 10px;
    background-color: #fff;
    border-bottom: solid 1px #aaa;
}

#top-bar p {
    padding: 0;
    margin: 0;
    font-size: 30px;
    font-weight: bold;
    color: #008a00;
}

nav {
    position: absolute;
    background: linear-gradient(to bottom, #7d7e7d 0%,#0e0e0e 100%);
    top: 0;
    bottom: 0;
    width: 110px;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.nav-btn {
    padding: 10px;
    color: #ccc;
    text-decoration: none;
    display: block;
}

.nav-btn:hover {
    background-color: #555;
}

.selected {
    background-color: #444;
    color: greenyellow;
}

#main {
    position: absolute;
    margin-left: 110px;
    bottom: 0;
    right: 0;
    left: 0;
    top: 50px;
}

#logo {
    position: absolute;
    left: 30px;
    bottom: 15px;
}

.bottom-toolbar {
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    background: #ccc;
    padding: 10px;
}

.tool-btn {
    padding: 5px;
}

.no-data-yet {
    position: absolute;
    top: 40%;
    width: 60%;
    left: 0;
    padding: 20px 0;
    background: rgba(200, 200, 200, 0.5);
    border-radius: 0.5em;
    text-align: center;
    margin: 0 20% 0;
}

.reports {
    border: 1px solid greenyellow;
    padding: 0;
    border: 0;
    margin: 0;
}

.report_table_header {
    color: #008a00;
}

.report_date {
    display: inline-block;
    width: 100px;
}

.report_name {
    display: inline-block;
    width: 100px;
}

.report_company {
    display: inline-block;
    width: 200px;
}

.report_comment {
    display: inline-block;
}

